--- a/MvcPL/Views/Account/Login.cshtml
+++ b/MvcPL/Views/Account/Login.cshtml
@@ -4,45 +4,52 @@
     ViewBag.Title = "Login";
 }
 
-@using (Html.BeginForm("Login", "Account", new {ReturnUrl = ViewBag.ReturnUrl}, FormMethod.Post, new {@class = "form-horizontal", role = "form"}))
+@section Header 
 {
-    @Html.AntiForgeryToken()
+    <h2>Log on user</h2>
+    <hr />
+}
 
-    <div class="form-horizontal">
-        <h2>Log on user</h2>
-        <hr/>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Login, new {@class = "control-label col-md-5"})
-            <div class="col-md-7 form-inline text-left ">
-                @Html.EditorFor(m => m.Login, new { htmlAttributes = new { @class = "form-control"}})
-                @Html.ValidationMessageFor(m => m.Login, "", new {@class = "text-danger" })
-            </div>
-        </div>
-        <br/>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Password, new {@class = "control-label col-md-5"})
-            <div class="col-md-7 form-inline text-left">
-                @Html.EditorFor(m => m.Password, new { htmlAttributes = new { @class = "form-control" }})
-                @Html.ValidationMessageFor(m => m.Password, "", new {@class = "text-danger"})
-            </div>
-        </div>
+@section Body
+{
+    @using (Html.BeginForm("Login", "Account", new {ReturnUrl = ViewBag.ReturnUrl}, FormMethod.Post, new {@class = "form-horizontal", role = "form"}))
+    {
+        @Html.AntiForgeryToken()
 
-        <div class="form-group">
-            @Html.LabelFor(m => m.RememberMe, new {@class = "control-label col-md-5"})
-            <div class="col-md-7">
-                <div class="checkbox">
-                    @Html.EditorFor(m => m.RememberMe)
-                    @Html.ValidationMessageFor(m => m.RememberMe, "", new {@class = "text-danger"})
+        <div class="form-horizontal">
+            <div class="form-group">
+                @Html.LabelFor(m => m.Login, new {@class = "control-label col-md-5"})
+                <div class="col-md-7 form-inline text-left ">
+                    @Html.EditorFor(m => m.Login, new {htmlAttributes = new {@class = "form-control"}})
+                    @Html.ValidationMessageFor(m => m.Login, "", new {@class = "text-danger"})
                 </div>
             </div>
-        </div>
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            <div class="col-md-12 form-inline">
-                <input type="submit" value="Login" class="btn btn-default"/>
-                <p class="btn btn-default">@Html.ActionLink("Register", "Register",null,  new {@style = "color: #fff;"})</p>
+            <br/>
+            <div class="form-group">
+                @Html.LabelFor(m => m.Password, new {@class = "control-label col-md-5"})
+                <div class="col-md-7 form-inline text-left">
+                    @Html.EditorFor(m => m.Password, new {htmlAttributes = new {@class = "form-control"}})
+                    @Html.ValidationMessageFor(m => m.Password, "", new {@class = "text-danger"})
+                </div>
             </div>
-        </div>
 
-    </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.RememberMe, new {@class = "control-label col-md-5"})
+                <div class="col-md-7">
+                    <div class="checkbox">
+                        @Html.EditorFor(m => m.RememberMe)
+                        @Html.ValidationMessageFor(m => m.RememberMe, "", new {@class = "text-danger"})
+                    </div>
+                </div>
+            </div>
+            @Html.ValidationSummary(true, "", new {@class = "text-danger"})
+            <div class="form-group">
+                <div class="col-md-12 form-inline">
+                    <input type="submit" value="Login" class="btn btn-default"/>
+                    <p class="btn btn-default">@Html.ActionLink("Register", "Register", null, new {@style = "color: #fff;"})</p>
+                </div>
+            </div>
+
+        </div>
+    }
 }
