--- a/MvcPL/Views/Account/Register.cshtml
+++ b/MvcPL/Views/Account/Register.cshtml
@@ -4,44 +4,50 @@
     ViewBag.Title = "Register";
 }
 
-<h2>Register</h2>
-
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@section Header
 {
-    @Html.AntiForgeryToken()
+    <h2>Register</h2>
     <hr />
-    <div class="form-group">
-        @Html.LabelFor(m => m.Login, new { @class = "col-md-5 control-label" })
-        <div class="col-md-7 form-inline text-left">
-            @Html.TextBoxFor(m => m.Login, new { @class = "form-control" })
-            @Html.ValidationMessageFor(m => m.Login, null, new { @class = "text-danger" })
+}
+
+@section Body
+{
+    @using (Html.BeginForm("Register", "Account", FormMethod.Post, new {@class = "form-horizontal", role = "form"}))
+    {
+        @Html.AntiForgeryToken()
+        <div class="form-group">
+            @Html.LabelFor(m => m.Login, new {@class = "col-md-5 control-label"})
+            <div class="col-md-7 form-inline text-left">
+                @Html.TextBoxFor(m => m.Login, new {@class = "form-control"})
+                @Html.ValidationMessageFor(m => m.Login, null, new {@class = "text-danger"})
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-5 control-label" })
-        <div class="col-md-7 form-inline text-left">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-            @Html.ValidationMessageFor(m => m.Email, null, new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(m => m.Email, new {@class = "col-md-5 control-label"})
+            <div class="col-md-7 form-inline text-left">
+                @Html.TextBoxFor(m => m.Email, new {@class = "form-control"})
+                @Html.ValidationMessageFor(m => m.Email, null, new {@class = "text-danger"})
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-5 control-label" })
-        <div class="col-md-7 form-inline text-left">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-            @Html.ValidationMessageFor(m => m.Password, null, new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(m => m.Password, new {@class = "col-md-5 control-label"})
+            <div class="col-md-7 form-inline text-left">
+                @Html.PasswordFor(m => m.Password, new {@class = "form-control"})
+                @Html.ValidationMessageFor(m => m.Password, null, new {@class = "text-danger"})
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new {@class = "col-md-5 control-label"})
-        <div class="col-md-7 form-inline text-left">
-            @Html.PasswordFor(m => m.ConfirmPassword, new {@class = "form-control"})
-            @Html.ValidationMessageFor(m => m.ConfirmPassword, null, new {@class = "text-danger"})
+        <div class="form-group">
+            @Html.LabelFor(m => m.ConfirmPassword, new {@class = "col-md-5 control-label"})
+            <div class="col-md-7 form-inline text-left">
+                @Html.PasswordFor(m => m.ConfirmPassword, new {@class = "form-control"})
+                @Html.ValidationMessageFor(m => m.ConfirmPassword, null, new {@class = "text-danger"})
+            </div>
         </div>
-    </div>
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        <div class="col-md-12">
-            <input type="submit" class="btn btn-default" value="Register" />
+        @Html.ValidationSummary(true, "", new {@class = "text-danger"})
+        <div class="form-group">
+            <div class="col-md-12">
+                <input type="submit" class="btn btn-default" value="Register"/>
+            </div>
         </div>
-    </div>
+    }
 }
