--- a/MvcPL/Views/Admin/Notifications.cshtml
+++ b/MvcPL/Views/Admin/Notifications.cshtml
@@ -4,84 +4,93 @@
     ViewBag.Title = "ConfirmRequests";
 }
 
-<h2>Notifications</h2>
+@section Header
+{
+    <h2>Notifications</h2>
+}
 
-<div class="panel panel-default">
-    <div class="panel-body">
-        <table class="table text-center vcenter">
-            <thead>
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.SectionName)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.CategoryName)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.ToConfirm)
-                </th>
-                <th>
+@section Body
+{
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <table class="table text-center vcenter">
+                <thead>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.SectionName)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.CategoryName)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.ToConfirm)
+                    </th>
+                    <th>
 
-                </th>
-            </tr>
-            </thead>
-            <tbody>
-            @foreach (var item in Model)
-            {
-                <tr class="@(item.ToConfirm ? "warning" : "danger")">
-                    <td>
-                        @Html.DisplayFor(modelItem => item.SectionName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.CategoryName)
-                    </td>
-                    <td>
-                        <span>@(item.ToConfirm ? "To confirm" : "To block")</span>
-                    </td>
-                    <td class="form-inline">
-                        <button name="result" id="@item.Id-accept" class="btn btn-sm">
-                            <span class="spanInButton glyphicon glyphicon-ok-circle" style="padding-left: 0;" aria-hidden="true"></span>
-                        </button>
-                        <button name="result" id="@item.Id-decline" class="btn btn-sm">
-                            <span class="spanInButton glyphicon glyphicon-remove-circle" style="padding-left: 0;" aria-hidden="true"></span>
-                        </button>
-                    </td>
+                    </th>
                 </tr>
-            }
-            </tbody>
-        </table>
-    </div>
-</div>
-
-<script>
-    $(document).ready(function() {
-        $("button[name='result']").click(function (event) { // ловим клик по ссылки с id="go"
-            debugger;
-            var requestIdNumber = parseInt(event.currentTarget.id);
-            var idSelector = event.currentTarget.id;
-            var requestModel = {};
-            requestModel.Id = requestIdNumber;
-            var res = idSelector.substr(idSelector.length - 6);
-            if (res === "accept") {
-                requestModel.Result = true;
-            } else {
-                requestModel.Result = false;
-            }
-            $.ajax({
-                type: "Post",
-                url: '/Admin/HandleRequest',
-                data: JSON.stringify({ 'requestModel': requestModel }),
-                contentType: 'application/json',
-                success: function(result) {
-                    debugger;
-                    if (result === 'True') {
-                        idSelector = "#" + idSelector;
-                        $(idSelector).parent().parent().remove();
-                    }
-                },
-                error: function(xhr, ajaxOptions, thrownError) {
+                </thead>
+                <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr class="@(item.ToConfirm ? "warning" : "danger")">
+                        <td>
+                            @Html.DisplayFor(modelItem => item.SectionName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CategoryName)
+                        </td>
+                        <td>
+                            <span>@(item.ToConfirm ? "To confirm" : "To block")</span>
+                        </td>
+                        <td class="form-inline">
+                            <button name="result" id="@item.Id-accept" class="btn btn-sm">
+                                <span class="spanInButton glyphicon glyphicon-ok-circle" style="padding-left: 0;" aria-hidden="true"></span>
+                            </button>
+                            <button name="result" id="@item.Id-decline" class="btn btn-sm">
+                                <span class="spanInButton glyphicon glyphicon-remove-circle" style="padding-left: 0;" aria-hidden="true"></span>
+                            </button>
+                        </td>
+                    </tr>
                 }
+                </tbody>
+            </table>
+        </div>
+    </div>
+}
+
+@section scripts
+{
+    <script>
+        $(document).ready(function() {
+            $("button[name='result']").click(function(event) { // ловим клик по ссылки с id="go"
+                debugger;
+                var requestIdNumber = parseInt(event.currentTarget.id);
+                var idSelector = event.currentTarget.id;
+                var requestModel = {};
+                requestModel.Id = requestIdNumber;
+                var res = idSelector.substr(idSelector.length - 6);
+                if (res === "accept") {
+                    requestModel.Result = true;
+                } else {
+                    requestModel.Result = false;
+                }
+                $.ajax({
+                    type: "Post",
+                    url: '/Admin/HandleRequest',
+                    data: JSON.stringify({ 'requestModel': requestModel }),
+                    contentType: 'application/json',
+                    success: function(result) {
+                        debugger;
+                        if (result === 'True') {
+                            idSelector = "#" + idSelector;
+                            $(idSelector).parent().parent().remove();
+                        }
+                    },
+                    error: function(xhr, ajaxOptions, thrownError) {
+                    }
+                });
             });
         });
-    });
-</script>
+    </script>
+}
